fix overflow x on mobile device

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -77,7 +77,7 @@ h2 {
 .head-translate-container {
   position: relative;
   left: -10%;
-  width: 98.93822vw;
+  width: 95vw;
   overflow: hidden;
 }
 
